# NS-Shift-Planner

./: .gitignore  CHANGELOG.md  CNAME  LICENSE.txt  Privacy Policy.md  README.md  Terms of Service.md  docker-compose.yml  index.html  pyproject.toml
assets/: index--4oQKx0c.js  index--7ENJCxx.css  index-B13jS01P.js  index-B54vgq7x.js  index-BPYvz9f5.js  index-BQ65hL7X.css  index-BVNjMFqv.js  index-Bru8Jx6C.js  index-C3k23CA_.js  index-CUtp6FLG.css  index-D3WzhbRw.css  index-DCiwvGc6.css  index-DIasczu9.js  index-Do73LhKO.js  index-EXuz9YDg.js  index-R-D4Zmz7.js  index-XSNfF8iu.js  index-fMDkrPEK.js  index-wIfzi8xJ.js
src/backend/: .dockerignore  Dockerfile  app.py  config.py  pyproject.toml  routes.py
src/backend/internal/: grid_handler.py  grid_manager.py  half_time_blocks.py  lru_cache.py  raw.csv  thread_safe_set.py  time_blocks.py
src/backend/routers/: health.py  planner.py
src/frontend/: Dockerfile  compress_grid_switch.py  config.py  control_panel.py  grid_event_handler.py  help_button.py  helper.py  hour_grid_handler.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  test.py  vite.config.js
src/frontend-old/: config.py
src/frontend-old/api/: urls_and_keys.py
src/frontend-old/components/: grid_event_handler.py  hour_grid_handler.py  menu_widget.py  swap_grid_name.py  upload_file.py
src/frontend-old/routes/: landing.py  session.py
tests/backend/: test_api_bg_jobs.py  test_grid_allocation_behaviour.py  test_grid_handler.py  test_grid_handler_serialisation.py  test_grid_manager.py  test_grid_manager_serialisation.py
(+34 files in other folders)
