[project]
name = "ns-shift-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.4.2",
    "fastapi[standard]>=0.115.12",
    "firebase-admin>=6.9.0",
    "google-cloud-firestore>=2.21.0",
    "nicegui>=2.19.0",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
