[project]
name = "ns-shift-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "python-dotenv>=1.1.0",
    "bitarray>=3.4.2",
    "firebase-admin>=6.9.0",
    "google-cloud-firestore>=2.21.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest>=8.4.0",
]


