[project]
name = "ns-shift-planner-backend"
version = "0.1.0"
description = "Shift planner backend service"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "python-dotenv>=1.1.0",
    "bitarray>=3.4.2",
    "firebase-admin>=6.9.0",
    "google-cloud-firestore>=2.21.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

dev = [
    "pytest>=8.4.0",
]

